--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="Personal about website"
     />
-    <meta property="og:image" content="https://about.dosaki.net/big-logo.jpg" />
-    <meta name="twitter:image" content="https://about.dosaki.net/big-logo.jpg">
+    <meta property="og:image" content="https://about.dosaki.net/images/big-logo.jpg" />
+    <meta name="twitter:image" content="https://about.dosaki.net/images/big-logo.jpg">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Dosaki's Lair</title>
   </head>
